backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: malekghraba/backend:1
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: backend-jar
              mountPath: /app.jar
      volumes:
        - name: backend-jar
          hostPath:
            path: /BACKEND/target/ebanking-backend-1.0-SNAPSHOT.jar
