backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: NodePort
