frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-namespace
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4200
      
  type: NodePort
  nodePort: 30080
