mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: my-namespace
spec:
  selector:
    app: my-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
